[tool.poetry]
name = "apf-fastapi-middleware-headers"
version = "0.1.0"
description = ""
authors = ["miraclemenikelechi <miracle.emenike7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
